--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Adasimbo iPhones - Your Premium iPhone & Flagship Samsung Store</title>
     <!-- Add Google Font link for Inter, or your chosen unique font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </head>
   <body class="font-sans">
     <!-- Live Video Background Container -->
